Update Gender notebook

--- a/notebook/[AGE] BDC 2021.ipynb
+++ b/notebook/[AGE] BDC 2021.ipynb
@@ -21,7 +21,7 @@
         "| Environtment | Keterangan | Link |\r\n",
         "| ------------ | ---------- | ---- |\r\n",
         "| Kaggle       | **Main Environtment** menggunakan GPU NVIDIA TESLA P100 GPU's | [disini](https://www.kaggle.com/wahyusetianto/age-bdc-2021) |\r\n",
-        "| Colab        | **Secondary**  menggunakan GPU NVIDIA TESLA K80's | Link |"
+        "| Colab        | **Secondary**  menggunakan GPU NVIDIA TESLA K80's | [disini](https://colab.research.google.com/github/Hyuto/bdc-2021/blob/master/notebook/%5BAGE%5D%20BDC%202021.ipynb) |"
       ]
     },
     {
@@ -157,16 +157,16 @@
       },
       "outputs": [],
       "source": [
-        "# Membuat main directori\n",
-        "MAIN_DIR = \"../SD20210000722\"\n",
-        "if not os.path.isdir(MAIN_DIR):\n",
-        "    os.mkdir(MAIN_DIR)\n",
-        "\n",
-        "# Global var\n",
-        "SEED = 2021\n",
-        "SIZE = (200, 200)\n",
-        "BATCH_SIZE = 32\n",
-        "FACE_THRESHOLD = 0.95\n",
+        "# Membuat main directori\r\n",
+        "MAIN_DIR = \"../SD20210000722\"\r\n",
+        "if not os.path.isdir(MAIN_DIR):\r\n",
+        "    os.mkdir(MAIN_DIR)\r\n",
+        "\r\n",
+        "# Global var\r\n",
+        "SEED = 2021\r\n",
+        "SIZE = (200, 200)\r\n",
+        "BATCH_SIZE = 32\r\n",
+        "FACE_THRESHOLD = 0.95\r\n",
         "FACE_DETECTOR = MTCNN()"
       ]
     },
