Update Gender notebook and upload model

--- a/notebook/[AGE] BDC 2021.ipynb
+++ b/notebook/[AGE] BDC 2021.ipynb
@@ -241,6 +241,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. Read Dataset\r\n",
+        "\r\n",
+        "Membaca data `csv` untuk mendapatkan informasi `path`, `jenis kelamin` dan `umur` dari data gambar"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -806,14 +815,14 @@
       },
       "outputs": [],
       "source": [
-        "download(\n",
-        "    \"https://raw.githubusercontent.com/Hyuto/fun/master/excluded-age.txt\", \n",
-        "    f\"{MAIN_DIR}/excluded-age.txt\"\n",
-        ")\n",
-        "    \n",
-        "with open(f\"{MAIN_DIR}/excluded-age.txt\") as f:\n",
-        "    excluded = [x for x in f.read().split(\"\\n\") if x != '']\n",
-        "    \n",
+        "download(\r\n",
+        "    \"https://raw.githubusercontent.com/Hyuto/bdc-2021/master/excluded-age.txt\", \r\n",
+        "    f\"{MAIN_DIR}/excluded-age.txt\"\r\n",
+        ")\r\n",
+        "    \r\n",
+        "with open(f\"{MAIN_DIR}/excluded-age.txt\") as f:\r\n",
+        "    excluded = [x for x in f.read().split(\"\\n\") if x != '']\r\n",
+        "    \r\n",
         "patterns = fr'{\"|\".join(excluded)}'"
       ]
     },
