Update 2 main notebook

--- a/notebook/[AGE] BDC 2021.ipynb
+++ b/notebook/[AGE] BDC 2021.ipynb
@@ -157,11 +157,6 @@
       },
       "outputs": [],
       "source": [
-        "# Membuat main directori\r\n",
-        "MAIN_DIR = \"../SD20210000722\"\r\n",
-        "if not os.path.isdir(MAIN_DIR):\r\n",
-        "    os.mkdir(MAIN_DIR)\r\n",
-        "\r\n",
         "# Global var\r\n",
         "SEED = 2021\r\n",
         "SIZE = (200, 200)\r\n",
@@ -176,11 +171,29 @@
         "id": "t4thCUnrQKYq"
       },
       "source": [
-        "## Dataset\n",
-        "\n",
-        "Mendownload dataset hasil preprocessing tim kami dan Load dataset yang mengandung informasi `path` dari data gambar.\n",
-        "\n",
-        "1. Mendownload dataset hasil preprocessing tim `SD20210000722`"
+        "## Dataset\r\n",
+        "\r\n",
+        "Mendownload dataset hasil preprocessing tim kami dan Load dataset yang mengandung informasi `path` dari data gambar.\r\n",
+        "\r\n",
+        "1. Mendownload dataset hasil preprocessing tim `SD20210000722` dari [repository Github](https://github.com/Hyuto/bdc-2021)\r\n",
+        "   \r\n",
+        "   **Note** : Pastikan `git` telah terinstall"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/Hyuto/bdc-2021.git"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Extract preprocess & augmented data"
       ]
     },
     {
@@ -209,34 +222,15 @@
       },
       "outputs": [],
       "source": [
-        "import requests, zipfile\n",
-        "from tqdm.notebook import tqdm\n",
-        "\n",
-        "def download(url: str, fname: str):\n",
-        "    resp = requests.get(url, stream=True)\n",
-        "    total = int(resp.headers.get('content-length', 0))\n",
-        "    with open(fname, 'wb') as file, tqdm(\n",
-        "        desc=fname,\n",
-        "        total=total,\n",
-        "        unit='iB',\n",
-        "        unit_scale=True,\n",
-        "        unit_divisor=1024,\n",
-        "    ) as bar:\n",
-        "        for data in resp.iter_content(chunk_size=1024):\n",
-        "            size = file.write(data)\n",
-        "            bar.update(size)\n",
-        "\n",
-        "DATA_DIR = os.path.join(MAIN_DIR, \"data\")\n",
-        "\n",
-        "if not os.path.isdir(DATA_DIR):\n",
-        "    os.mkdir(DATA_DIR)\n",
-        "\n",
-        "download(\n",
-        "    \"https://media.githubusercontent.com/media/Hyuto/bdc-2021/master/bdc-2021-preprocessed-augmented.zip\", \n",
-        "    os.path.join(MAIN_DIR, \"data_SD20210000722.zip\")\n",
-        ")\n",
-        "\n",
-        "with zipfile.ZipFile(os.path.join(MAIN_DIR, \"data_SD20210000722.zip\"), 'r') as zip_ref:\n",
+        "import zipfile\r\n",
+        "\r\n",
+        "MAIN_DIR = os.path.join(\".\", \"bdc-2021\")\r\n",
+        "DATA_DIR = os.path.join(MAIN_DIR, \"data\")\r\n",
+        "\r\n",
+        "with zipfile.ZipFile(os.path.join(DATA_DIR, \"preprocessed.zip\"), 'r') as zip_ref:\r\n",
+        "    zip_ref.extractall(DATA_DIR)\r\n",
+        "\r\n",
+        "with zipfile.ZipFile(os.path.join(DATA_DIR, \"preprocessed-augmented.zip\"), 'r') as zip_ref:\r\n",
         "    zip_ref.extractall(DATA_DIR)"
       ]
     },
@@ -726,12 +720,16 @@
       },
       "outputs": [],
       "source": [
-        "# new_train_dir = f\"{DATA_DIR}/train\"\n",
-        "# new_test_dir = f\"{DATA_DIR}/test\"\n",
-        "\n",
-        "# random.seed(SEED)\n",
-        "# new_images, new_labels = image_preprocessing(new_train_dir, images, labels)\n",
-        "# new_test_images, _ = image_preprocessing(new_test_dir, test_images)"
+        "# preprocessed_dir = \".\"\r\n",
+        "# new_train_dir = \"./train\"\r\n",
+        "# new_test_dir = \"./test\"\r\n",
+        "\r\n",
+        "# random.seed(SEED)\r\n",
+        "# new_images, new_labels = image_preprocessing(new_train_dir, images, labels)\r\n",
+        "# new_test_images, _ = image_preprocessing(new_test_dir, test_images)\r\n",
+        "\r\n",
+        "# preprocessed = pd.DataFrame({\"image\": new_images, \"label\": new_labels, \"age\": new_ages})\r\n",
+        "# preprocessed.head()"
       ]
     },
     {
@@ -740,7 +738,7 @@
         "id": "KMP_2R9zQKYx"
       },
       "source": [
-        "**Note** : Comment dua block kode di bawah jika melakukan preprocess pada run saat ini."
+        "**Note** : Comment kode block di bawah jika melakukan preprocess pada run saat ini."
       ]
     },
     {
@@ -764,7 +762,8 @@
       },
       "outputs": [],
       "source": [
-        "preprocessed = pd.read_csv(f\"{DATA_DIR}/preprocessed-augmented/preprocessed.csv\")\n",
+        "preprocessed_dir = os.path.join(DATA_DIR, 'preprocessed-augmented')\r\n",
+        "preprocessed = pd.read_csv(f\"{preprocessed_dir}/preprocessed.csv\")\r\n",
         "preprocessed.head()"
       ]
     },
@@ -774,11 +773,9 @@
         "id": "IAeJyHUXR6va"
       },
       "source": [
-        "## Filterisasi Data\n",
-        "\n",
-        "Menyaring data yang akan dilatih ke dalam model dengan melakukan filterisasi terhadap data gambar yang memiliki kualitas gambar yang kurang baik dan misslabel.\n",
-        "\n",
-        "1. Mendownload list data gambar yang akan dibuang."
+        "## Filterisasi Data\r\n",
+        "\r\n",
+        "Menyaring data yang akan dilatih ke dalam model dengan melakukan filterisasi terhadap data gambar yang memiliki kualitas gambar yang kurang baik dan misslabel."
       ]
     },
     {
@@ -815,12 +812,7 @@
       },
       "outputs": [],
       "source": [
-        "download(\r\n",
-        "    \"https://raw.githubusercontent.com/Hyuto/bdc-2021/master/excluded-age.txt\", \r\n",
-        "    f\"{MAIN_DIR}/excluded-age.txt\"\r\n",
-        ")\r\n",
-        "    \r\n",
-        "with open(f\"{MAIN_DIR}/excluded-age.txt\") as f:\r\n",
+        "with open(f\"{MAIN_DIR}/excluded-gender.txt\") as f:\r\n",
         "    excluded = [x for x in f.read().split(\"\\n\") if x != '']\r\n",
         "    \r\n",
         "patterns = fr'{\"|\".join(excluded)}'"
@@ -832,9 +824,7 @@
         "id": "ZPp75X1-SwAo"
       },
       "source": [
-        "2. Filterisasi \r\n",
-        "\r\n",
-        "Membuang data gambar yang memiliki pola yang sama seperti yang ada di list"
+        "**Filtering**"
       ]
     },
     {
@@ -853,19 +843,18 @@
       },
       "outputs": [],
       "source": [
-        "preprocessed_dir = f\"{DATA_DIR}/preprocessed-augmented\"\n",
-        "new_images, new_labels, new_ages = [], [], []\n",
-        "\n",
-        "for image, label, age in preprocessed[[\"image\", \"label\", \"age\"]].values:\n",
-        "    if not re.search(patterns, image):\n",
-        "        new_images.append(os.path.join(preprocessed_dir, image))\n",
-        "        new_labels.append(label)\n",
-        "        new_ages.append(age)\n",
-        "\n",
-        "new_test_images = np.asarray([os.path.join(preprocessed_dir, \"test\", f\"{x}.jpg\") for x in test.id.values])\n",
-        "\n",
-        "new_images = np.asarray(new_images)\n",
-        "new_labels = np.asarray(new_labels)\n",
+        "new_images, new_labels, new_ages = [], [], []\r\n",
+        "\r\n",
+        "for image, label, age in preprocessed[[\"image\", \"label\", \"age\"]].values:\r\n",
+        "    if not re.search(patterns, image):\r\n",
+        "        new_images.append(os.path.join(preprocessed_dir, image))\r\n",
+        "        new_labels.append(label)\r\n",
+        "        new_ages.append(age)\r\n",
+        "\r\n",
+        "new_test_images = np.asarray([os.path.join(preprocessed_dir, \"test\", f\"{x}.jpg\") for x in test.id.values])\r\n",
+        "\r\n",
+        "new_images = np.asarray(new_images)\r\n",
+        "new_labels = np.asarray(new_labels)\r\n",
         "new_ages = np.asarray(new_ages)"
       ]
     },
@@ -1217,7 +1206,7 @@
       },
       "outputs": [],
       "source": [
-        "test.to_csv(f\"{MAIN_DIR}/submission-age.csv\", index=False)"
+        "test.to_csv(f\"submission-age.csv\", index=False)"
       ]
     }
   ],
