--- a/notebook/[AGE] BDC 2021.ipynb
+++ b/notebook/[AGE] BDC 2021.ipynb
@@ -41,9 +41,9 @@
         "id": "wltkXah8QKYm"
       },
       "source": [
-        "1. Menginstal library `MTCNN` dan `Albumentations`\n",
-        "\n",
-        "Library `MTCNN` dan `Albumentations` adalah library yang digunakan untuk preprocessing data gambar pada notebook ini"
+        "1. Menginstal library `MTCNN` dan `Albumentations`\r\n",
+        "   \r\n",
+        "   Library `MTCNN` dan `Albumentations` adalah library yang digunakan untuk preprocessing data gambar pada notebook ini"
       ]
     },
     {
@@ -76,9 +76,9 @@
         "id": "SiPyUlKSQKYo"
       },
       "source": [
-        "2. Importing library\n",
-        "\n",
-        "Mengimport library yang akan digunakan dalam notebook ini."
+        "2. Importing library\r\n",
+        "   \r\n",
+        "   Mengimport library yang akan digunakan dalam notebook ini."
       ]
     },
     {
@@ -103,30 +103,30 @@
       },
       "outputs": [],
       "source": [
-        "# Umum\n",
-        "import os, random, re\n",
-        "from tqdm.notebook import tqdm\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from PIL import Image\n",
-        "\n",
-        "# Tensorflow\n",
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
-        "\n",
-        "# Metrics & Splitting data\n",
-        "from sklearn.metrics import *\n",
-        "from sklearn.model_selection import *\n",
-        "\n",
-        "# Plotting\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "\n",
-        "# Preprocessing\n",
-        "import cv2\n",
-        "from mtcnn import MTCNN\n",
-        "import albumentations as A\n",
-        "\n",
+        "# Umum\r\n",
+        "import os, random, re\r\n",
+        "from tqdm.notebook import tqdm\r\n",
+        "import numpy as np\r\n",
+        "import pandas as pd\r\n",
+        "\r\n",
+        "# Tensorflow\r\n",
+        "import tensorflow as tf\r\n",
+        "from tensorflow.keras.preprocessing.image import load_img, img_to_array\r\n",
+        "\r\n",
+        "# Metrics & Splitting data\r\n",
+        "from sklearn.metrics import *\r\n",
+        "from sklearn.model_selection import *\r\n",
+        "\r\n",
+        "# Plotting\r\n",
+        "import matplotlib.pyplot as plt\r\n",
+        "import seaborn as sns\r\n",
+        "\r\n",
+        "# Preprocessing\r\n",
+        "import cv2\r\n",
+        "import albumentations as A\r\n",
+        "from mtcnn import MTCNN\r\n",
+        "from PIL import Image\r\n",
+        "\r\n",
         "print(\"Tensorflow :\", tf.__version__)"
       ]
     },
@@ -136,9 +136,9 @@
         "id": "7B6PE_NMQKYp"
       },
       "source": [
-        "3. Setup `CONFIG`\n",
-        "\n",
-        "Mensetup varible - variable yang digunakan sebagai config pada notebook ini"
+        "3. Setup `CONFIG`\r\n",
+        "   \r\n",
+        "   Mensetup varible - variable yang digunakan sebagai config pada notebook ini"
       ]
     },
     {
@@ -239,8 +239,8 @@
       "metadata": {},
       "source": [
         "2. Read Dataset\r\n",
-        "\r\n",
-        "Membaca data `csv` untuk mendapatkan informasi `path`, `jenis kelamin` dan `umur` dari data gambar"
+        "   \r\n",
+        "   Membaca data `csv` untuk mendapatkan informasi `path`, `jenis kelamin` dan `umur` dari data gambar"
       ]
     },
     {
@@ -620,77 +620,86 @@
       },
       "outputs": [],
       "source": [
-        "import shutil\n",
-        "\n",
-        "def image_preprocessing(new_dir, images, labels=None):\n",
-        "    if os.path.isdir(new_dir):\n",
-        "        shutil.rmtree(new_dir)\n",
-        "    os.mkdir(new_dir)\n",
-        "    \n",
-        "    new_images, new_labels = [], []\n",
-        "    if not labels:\n",
-        "        labels = [None for _ in range(len(images))]\n",
-        "    \n",
-        "    for path, label in tqdm(zip(images, labels), total=len(images)):\n",
-        "        image = img_to_array(load_img(path))\n",
-        "        if label != None:\n",
-        "            faces = [x['box'] for x in sorted(get_faces(path), key=lambda x: x['confidence'], \n",
-        "                                              reverse=True) if x['confidence'] > FACE_THRESHOLD]\n",
-        "        else:\n",
-        "            faces = [x['box'] for x in sorted(get_faces(path), key=lambda x: x['confidence'], reverse=True)]\n",
-        "        if len(faces) > 0:\n",
-        "            if label != None:\n",
-        "                for j, (x, y, w, h) in enumerate(faces):\n",
-        "                    img = image[y:y+h, x:x+w]\n",
-        "                    img = tf.convert_to_tensor(img, dtype=tf.float32)\n",
-        "                    img = tf.image.resize(img, SIZE)\n",
-        "                    img = tf.cast(img, tf.float32) / 255.0\n",
-        "\n",
-        "                    img_dir = os.path.join(new_dir, f'{j}_{path.split(\"/\")[-1]}')\n",
-        "                    new_images.append(img_dir)\n",
-        "                    new_labels.append(label)\n",
-        "                    tf.keras.preprocessing.image.save_img(img_dir, img)\n",
-        "                    \n",
-        "                    for k in range(3):\n",
-        "                        augmented = aug(image=img.numpy())['image']\n",
-        "                        img_dir = os.path.join(new_dir, f'aug-{k}_{j}_{path.split(\"/\")[-1]}')\n",
-        "                        new_images.append(img_dir)\n",
-        "                        new_labels.append(label)\n",
-        "                        tf.keras.preprocessing.image.save_img(img_dir, augmented)\n",
-        "            else:\n",
-        "                x, y, w, h = faces[0]\n",
-        "                img = image[y:y+h, x:x+w]\n",
-        "                img = tf.convert_to_tensor(img, dtype=tf.float32)\n",
-        "                img = tf.image.resize(img, SIZE)\n",
-        "                img = tf.cast(img, tf.float32) / 255.0\n",
-        "                \n",
-        "                img_dir = os.path.join(new_dir, path.split('/')[-1])\n",
-        "                new_images.append(img_dir)\n",
-        "                new_labels.append(label)\n",
-        "                tf.keras.preprocessing.image.save_img(img_dir, img)\n",
-        "        else :\n",
-        "            img = tf.convert_to_tensor(image, dtype=tf.float32)\n",
-        "            shapes = tf.shape(img)\n",
-        "            h, w = shapes[-3], shapes[-2]\n",
-        "            dim = tf.minimum(h, w)\n",
-        "            img = tf.image.resize_with_crop_or_pad(img, dim, dim)\n",
-        "            img = tf.image.resize(img, SIZE)\n",
-        "            img = tf.cast(img, tf.float32) / 255.0\n",
-        "\n",
-        "            img_dir = os.path.join(new_dir, path.split('/')[-1])\n",
-        "            new_images.append(img_dir)\n",
-        "            new_labels.append(label)\n",
-        "            tf.keras.preprocessing.image.save_img(img_dir, img)\n",
-        "            \n",
-        "            if label != None:\n",
-        "                for k in range(3):\n",
-        "                    augmented = aug(image=img.numpy())['image']\n",
-        "                    img_dir = os.path.join(new_dir,  f'aug-{k}_{path.split(\"/\")[-1]}')\n",
-        "                    new_images.append(img_dir)\n",
-        "                    new_labels.append(label)\n",
-        "                    tf.keras.preprocessing.image.save_img(img_dir, augmented)\n",
-        "    \n",
-        "    return new_images, new_labels"
+        "import shutil\r\n",
+        "\r\n",
+        "def image_preprocessing(new_dir, images, labels=None, ages=None):\r\n",
+        "    if os.path.isdir(new_dir):\r\n",
+        "        shutil.rmtree(new_dir)\r\n",
+        "    os.mkdir(new_dir)\r\n",
+        "    \r\n",
+        "    new_images, new_labels, new_ages = [], [], []\r\n",
+        "    labels = [None for _ in range(len(images))] if not labels else labels\r\n",
+        "    ages = [None for _ in range(len(images))] if not ages else ages\r\n",
+        "    \r\n",
+        "    for path, label, age in tqdm(zip(images, labels, ages), total=len(images)):\r\n",
+        "        image = img_to_array(load_img(path))\r\n",
+        "        if label != None:\r\n",
+        "            faces = [x['box'] for x in sorted(get_faces(path), key=lambda x: x['confidence'], \r\n",
+        "                                              reverse=True) if x['confidence'] > FACE_THRESHOLD]\r\n",
+        "        else:\r\n",
+        "            faces = [x['box'] for x in sorted(get_faces(path), key=lambda x: x['confidence'], reverse=True)]\r\n",
+        "        if len(faces) > 0:\r\n",
+        "            if label != None:\r\n",
+        "                for j, (x, y, w, h) in enumerate(faces):\r\n",
+        "                    img = image[y:y+h, x:x+w]\r\n",
+        "                    img = tf.convert_to_tensor(img, dtype=tf.float32)\r\n",
+        "                    img = tf.image.resize(img, SIZE)\r\n",
+        "                    img = tf.cast(img, tf.float32) / 255.0\r\n",
+        "\r\n",
+        "                    img_dir = os.path.join(new_dir, f'{j}_{path.split(\"/\")[-1]}')\r\n",
+        "                    new_images.append(img_dir)\r\n",
+        "                    new_labels.append(label)\r\n",
+        "                    if age != None:\r\n",
+        "                        new_ages.append(age)\r\n",
+        "                    tf.keras.preprocessing.image.save_img(img_dir, img)\r\n",
+        "                    \r\n",
+        "                    for k in range(3):\r\n",
+        "                        augmented = aug(image=img.numpy())['image']\r\n",
+        "                        img_dir = os.path.join(new_dir, f'aug-{k}_{j}_{path.split(\"/\")[-1]}')\r\n",
+        "                        new_images.append(img_dir)\r\n",
+        "                        new_labels.append(label)\r\n",
+        "                        if age != None:\r\n",
+        "                            new_ages.append(age)\r\n",
+        "                        tf.keras.preprocessing.image.save_img(img_dir, augmented)\r\n",
+        "                        \r\n",
+        "            else:\r\n",
+        "                x, y, w, h = faces[0]\r\n",
+        "                img = image[y:y+h, x:x+w]\r\n",
+        "                img = tf.convert_to_tensor(img, dtype=tf.float32)\r\n",
+        "                img = tf.image.resize(img, SIZE)\r\n",
+        "                img = tf.cast(img, tf.float32) / 255.0\r\n",
+        "            \r\n",
+        "                img_dir = os.path.join(new_dir, path.split('/')[-1])\r\n",
+        "                new_images.append(img_dir)\r\n",
+        "                tf.keras.preprocessing.image.save_img(img_dir, img)\r\n",
+        "                \r\n",
+        "        else :\r\n",
+        "            img = tf.convert_to_tensor(image, dtype=tf.float32)\r\n",
+        "            shapes = tf.shape(img)\r\n",
+        "            h, w = shapes[-3], shapes[-2]\r\n",
+        "            dim = tf.minimum(h, w)\r\n",
+        "            img = tf.image.resize_with_crop_or_pad(img, dim, dim)\r\n",
+        "            img = tf.image.resize(img, SIZE)\r\n",
+        "            img = tf.cast(img, tf.float32) / 255.0\r\n",
+        "\r\n",
+        "            img_dir = os.path.join(new_dir, path.split('/')[-1])\r\n",
+        "            new_images.append(img_dir)\r\n",
+        "            new_labels.append(label)\r\n",
+        "            if age != None:\r\n",
+        "                new_ages.append(age)\r\n",
+        "            tf.keras.preprocessing.image.save_img(img_dir, img)\r\n",
+        "            \r\n",
+        "            if label != None:\r\n",
+        "                for k in range(3):\r\n",
+        "                    augmented = aug(image=img.numpy())['image']\r\n",
+        "                    img_dir = os.path.join(new_dir,  f'aug-{k}_{path.split(\"/\")[-1]}')\r\n",
+        "                    new_images.append(img_dir)\r\n",
+        "                    new_labels.append(label)\r\n",
+        "                    if age != None:\r\n",
+        "                        new_ages.append(age)\r\n",
+        "                    tf.keras.preprocessing.image.save_img(img_dir, augmented)\r\n",
+        "    \r\n",
+        "    return new_images, new_labels, new_ages"
       ]
     },
     {
@@ -725,7 +734,7 @@
         "# new_test_dir = \"./test\"\r\n",
         "\r\n",
         "# random.seed(SEED)\r\n",
-        "# new_images, new_labels = image_preprocessing(new_train_dir, images, labels)\r\n",
+        "# new_images, new_labels = image_preprocessing(new_train_dir, images, labels, ages)\r\n",
         "# new_test_images, _ = image_preprocessing(new_test_dir, test_images)\r\n",
         "\r\n",
         "# preprocessed = pd.DataFrame({\"image\": new_images, \"label\": new_labels, \"age\": new_ages})\r\n",
