Add test notebook

--- a/notebook/[GENDER] BDC - 2021.ipynb
+++ b/notebook/[GENDER] BDC - 2021.ipynb
@@ -14,22 +14,22 @@
         "tags": []
       },
       "source": [
-        "# BDC - Satria Data 2021\n",
-        "\n",
-        "Task : Gender Detection\n",
-        "\n",
-        "## Authors\n",
-        "\n",
-        "1. Muhammad Amanda\n",
-        "2. Naufal Zhafran A.\n",
-        "3. Wahyu Setianto\n",
-        "\n",
-        "## Running On\n",
-        "\n",
-        "| Environtment | Keterangan | Link |\n",
-        "| ------------ | ---------- | ---- |\n",
-        "| Kaggle       | **Main Environtment** menggunakan GPU NVIDIA TESLA P100 GPU's | [disini](https://www.kaggle.com/wahyusetianto/gender-bdc-2021) |\n",
-        "| Colab        | **Secondary**  menggunakan GPU NVIDIA TESLA K80's | [disini](https://colab.research.google.com/github/Hyuto/bdc-2021/blob/master/notebook/%5BGENDER%5D%20BDC%20-%202021.ipynb) |"
+        "# BDC - Satria Data 2021\r\n",
+        "\r\n",
+        "Task : Gender Detection\r\n",
+        "\r\n",
+        "## Authors\r\n",
+        "\r\n",
+        "1. Muhammad Amanda\r\n",
+        "2. Naufal Zhafran A.\r\n",
+        "3. Wahyu Setianto\r\n",
+        "\r\n",
+        "## Running On\r\n",
+        "\r\n",
+        "| Environtment | Keterangan | Link |\r\n",
+        "| ------------ | ---------- | ---- |\r\n",
+        "| Kaggle       | **Main Environtment** menggunakan GPU NVIDIA TESLA P100 GPU's | [![kaggle](https://img.shields.io/badge/%20-Kaggle-blue?logo=kaggle)](https://www.kaggle.com/wahyusetianto/gender-bdc-2021) |\r\n",
+        "| Colab        | **Secondary**  menggunakan GPU NVIDIA TESLA K80's | [![colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Hyuto/bdc-2021/blob/master/notebook/%5BGENDER%5D%20BDC%20-%202021.ipynb) |"
       ]
     },
     {
