--- a/notebook/[AGE] BDC - 2021.ipynb
+++ b/notebook/[AGE] BDC - 2021.ipynb
@@ -20,8 +20,8 @@
         "\r\n",
         "| Environtment | Keterangan | Link |\r\n",
         "| ------------ | ---------- | ---- |\r\n",
-        "| Kaggle       | **Main Environtment** menggunakan GPU NVIDIA TESLA P100 GPU's | [disini](https://www.kaggle.com/wahyusetianto/age-bdc-2021) |\r\n",
-        "| Colab        | **Secondary**  menggunakan GPU NVIDIA TESLA K80's | [disini](https://colab.research.google.com/github/Hyuto/bdc-2021/blob/master/notebook/%5BAGE%5D%20BDC%202021.ipynb) |"
+        "| Kaggle       | **Main Environtment** menggunakan GPU NVIDIA TESLA P100 GPU's | [![kaggle](https://img.shields.io/badge/%20-Kaggle-blue?logo=kaggle)](https://www.kaggle.com/wahyusetianto/age-bdc-2021) |\r\n",
+        "| Colab        | **Secondary**  menggunakan GPU NVIDIA TESLA K80's | [![colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Hyuto/bdc-2021/blob/master/notebook/%5BAGE%5D%20BDC%202021.ipynb) |"
       ]
     },
     {
