Update colab notebook to handle error in opencv version

--- a/notebook/[GENDER] BDC - 2021.ipynb
+++ b/notebook/[GENDER] BDC - 2021.ipynb
@@ -97,8 +97,9 @@
       },
       "outputs": [],
       "source": [
-        "!pip -q install mtcnn --upgrade\n",
-        "!pip -q install albumentations --upgrade"
+        "!pip -q install mtcnn --upgrade\r\n",
+        "!pip -q install albumentations --upgrade\r\n",
+        "!pip -q install opencv-python-headless==4.1.2.30"
       ]
     },
     {
@@ -1560,7 +1561,7 @@
       "hash": "b5c2f9982651e6679fa9a68d4ecb0e0e8c17f3b7df4d9abcf37d6df8a7589c17"
     },
     "kernelspec": {
-      "display_name": "Python 3.8.7 64-bit",
+      "display_name": "Python 3.8.10 64-bit",
       "name": "python3"
     },
     "language_info": {
