--- a/notebook/Test Model.ipynb
+++ b/notebook/Test Model.ipynb
@@ -29,13 +29,13 @@
         "id": "jz8oaUCrLp0d"
       },
       "source": [
-        "## First Thing First\n",
-        "\n",
-        "Menginstall library yang diperlukan dan mengimport library - library yang akan digunakan serta menseting variable config yang akan digunakan di dalam notebook ini.\n",
-        "\n",
-        "1. Menginstal library `MTCNN` dan `Albumentations`\n",
-        "   \n",
-        "   Library `MTCNN` dan `Albumentations` adalah library yang digunakan untuk preprocessing data gambar pada notebook ini"
+        "## First Thing First\r\n",
+        "\r\n",
+        "Menginstall library yang diperlukan dan mengimport library - library yang akan digunakan serta menseting variable config yang akan digunakan di dalam notebook ini.\r\n",
+        "\r\n",
+        "1. Menginstal library `MTCNN` dan `Albumentations`\r\n",
+        "   \r\n",
+        "   Library `MTCNN` adalah library yang digunakan untuk preprocessing data gambar pada notebook ini"
       ]
     },
     {
@@ -61,8 +61,7 @@
         }
       ],
       "source": [
-        "!pip -q install mtcnn --upgrade\n",
-        "!pip -q install albumentations --upgrade"
+        "!pip -q install mtcnn --upgrade"
       ]
     },
     {
@@ -584,7 +583,7 @@
       "hash": "b5c2f9982651e6679fa9a68d4ecb0e0e8c17f3b7df4d9abcf37d6df8a7589c17"
     },
     "kernelspec": {
-      "display_name": "Python 3.8.7 64-bit",
+      "display_name": "Python 3.8.10 64-bit",
       "name": "python3"
     },
     "language_info": {
